--- a/login/login_styles.css
+++ b/login/login_styles.css
@@ -48,7 +48,8 @@ label{
     font-family: var(--sub-font);
 }
 
-input[type=text]{
+input[type=text],
+input[type=password]{
     width: 400px;
     height: 40px;
     font-size: 16px;
@@ -56,10 +57,13 @@ input[type=text]{
     margin: 0.2rem auto 1rem auto;
     border-radius: 10px;
     background-color: var(--light-blue);
-    border: none;
+    border: none !important;
 }
 
-input[type=text]:focus, input[type=text]:hover{
+
+
+input[type=text]:focus, input[type=text]:hover,
+input[type=password]:focus, input[type=password]:hover{
     background-color: white;
     border: 4px solid var(--light-blue);
 }
